removed bucket class from code
