# eocdb/core/models/dataset.py
@@ -22,7 +22,6 @@
 
 from typing import Dict, List, Optional, Union
 
-from .bucket import Bucket
 from ..asserts import assert_not_none, assert_one_of
 from ..model import Model
 
@@ -39,20 +38,20 @@ class Dataset(Model):
     The Dataset model.
     """
     def __init__(self,
-                 bucket: Bucket,
+                 rel_path: str,
                  name: str,
                  status: str,
                  metadata: Dict,
                  records: List[List[Field]],
                  id_: str = None):
-        assert_not_none(bucket, name='bucket')
+        assert_not_none(rel_path, name='rel_path')
         assert_not_none(name, name='name')
         assert_not_none(status, name='status')
         assert_one_of(status, ['new', 'validating', 'available', 'hidden'], name='status')
         assert_not_none(metadata, name='metadata')
         assert_not_none(records, name='records')
         self._id = id_
-        self._bucket = bucket
+        self._rel_path = rel_path
         self._name = name
         self._status = status
         self._metadata = metadata
@@ -67,13 +66,13 @@ class Dataset(Model):
         self._id = value
 
     @property
-    def bucket(self) -> Bucket:
-        return self._bucket
+    def rel_path(self) -> str:
+        return self._rel_path
 
-    @bucket.setter
-    def bucket(self, value: Bucket):
+    @rel_path.setter
+    def rel_path(self, value: rel_path):
         assert_not_none(value, name='value')
-        self._bucket = value
+        self._rel_path = value
 
     @property
     def name(self) -> str:
